# exSeed

./: .gitignore  LICENSE  README.md
client/: README.md  firestore.rules  pubspec.yaml
client/android/app/: build.gradle  google-services.json
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/exseed/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: firebase_options.dart  grid.dart  main.dart  recommendations.dart  soil.dart  tasklist.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
server/: Cargo.toml
server/src/: main.rs
