[package]
name = "exseed_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
lazy_static = "1.4.0"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
